[gd_scene load_steps=10 format=3 uid="uid://b2e1aj6255oj3"]

[ext_resource type="Texture2D" uid="uid://udo31xfugt4p" path="res://Art/Background.png" id="1_p3vre"]
[ext_resource type="Script" path="res://farmingPlot.gd" id="1_ypmp3"]
[ext_resource type="Texture2D" uid="uid://bxsaguoc37dvi" path="res://Art/clownflower.png" id="3_8rvq2"]
[ext_resource type="AudioStream" uid="uid://dkoiymhgudwh0" path="res://Audio/SFX/Generator/BreadGame Generator Middle v.2.wav" id="3_uqv2l"]
[ext_resource type="AudioStream" uid="uid://deoeafx2nqa4f" path="res://Audio/SFX/Generator/BreadGame Generator Left v.2.wav" id="4_t75b8"]
[ext_resource type="AudioStream" uid="uid://b6tbphl60bgjv" path="res://Audio/SFX/Generator/BreadGame Generator Right v.2.wav" id="4_tru8b"]
[ext_resource type="PackedScene" uid="uid://j7berl234qre" path="res://UniversalButton.tscn" id="7_8dnrh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbufx"]
bg_color = Color(0.423529, 0.423529, 0.423529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdwka"]
bg_color = Color(1, 1, 1, 1)

[node name="Plot" type="VBoxContainer"]
offset_left = 574.0
offset_top = 368.0
offset_right = 685.0
offset_bottom = 408.0
script = ExtResource("1_ypmp3")
completedColor = Color(0.105882, 0.933333, 0.239216, 1)
progressColor = Color(0.956863, 0.784314, 0.172549, 1)
harvestSFXArray = Array[AudioStreamWAV]([ExtResource("4_t75b8"), ExtResource("3_uqv2l"), ExtResource("4_tru8b")])

[node name="Plot Texture" type="TextureRect" parent="."]
modulate = Color(0.572549, 0.635294, 0.678431, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("1_p3vre")
expand_mode = 1

[node name="Plant Texture" type="TextureRect" parent="Plot Texture"]
modulate = Color(0.839216, 0.839216, 0.839216, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("3_8rvq2")
expand_mode = 3
stretch_mode = 4

[node name="HarvestButton" parent="." instance=ExtResource("7_8dnrh")]
layout_mode = 2
text = " "

[node name="ProgressBar" type="ProgressBar" parent="HarvestButton"]
unique_name_in_owner = true
modulate = Color(0.956863, 0.784314, 0.172549, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_jbufx")
theme_override_styles/fill = SubResource("StyleBoxFlat_cdwka")
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="HarvestButton"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00149, 1.00683)
mouse_filter = 2
bbcode_enabled = true
text = "[center]Plant[/center]"
text_direction = 1

[node name="HarvestSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_t75b8")

[node name="WaterButton" parent="." instance=ExtResource("7_8dnrh")]
layout_mode = 2
text = " "

[node name="WaterText" type="RichTextLabel" parent="WaterButton"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00149, 1.00683)
mouse_filter = 2
bbcode_enabled = true
text = "[center]Water[/center]"
text_direction = 1

[connection signal="button_down" from="HarvestButton" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="WaterButton" to="." method="_on_water_button_button_down"]
